# ClipMind

./: ## Performance.md  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.worker  README.md  README_AI_INTEGRATION.md  README_AI_SETUP.md  README_DATABASE.md  README_SEARCH.md  pyproject.toml  requirements_ai.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_search_analytics.py
backend/app/: main.py
backend/app/ai/: clip_model.py  sentence_bert.py  whisper_model.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analytics.py  compilations.py  search.py  videos.py  (+1 more)
backend/app/core/: config.py  dependencies.py  exceptions.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  clip.py  compilation.py  project.py  search_query.py  user.py  user_update.py  video.py
backend/app/orchestration/workflows/: ai_processing.py  video_ingestion.py
backend/app/repositories/: search_repository.py
backend/app/schemas/: analytics.py  compilation.py  search.py  search_complete.py  video.py
backend/app/search/: pinecone_client.py
backend/app/services/: analytics_service.py  compilation_service.py  search_service.py  search_service_complete.py  video_service.py
backend/app/tasks/: celery_app.py  video_tasks.py
backend/app/workers/: compilation_renderer.py  scene_detector.py  video_processor.py
backend/scripts/: create_migration.sh  reset_db.sh  run_migrations.sh
backend/tests/: test_api.py  test_integrations.py  test_models.py
(+26 files in other folders)
